@@ -1,3 +1,8 @@
+2006-11-17 "Antoine Bajolet" <antoine.bajolet@tdf.fr>
+
+	* lwgeom/lwgeom_gist.c: fixed 'directives may not be used inside a
+	  macro argument' error raised by some compilers.
+
 2006-11-10 Sandro Santilli <strk@refractions.net>
 
 	* configure.in (geos detection): use $geos_prefix/lib when
